[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatevault"
version = "1.0.0"
description = "A Python auth library that handles JWT token management, password hashing, OAuth2 login flow, and route protection — so you don't have to wire it together yourself."
requires-python = ">=3.9"
dependencies = ["PyJWT", "bcrypt"]
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Richard Oyelowo"}]

[project.urls]
Homepage = "https://github.com/RichardOyelowo/authgate"
Repository = "https://github.com/RichardOyelowo/authgate"
